# pmcontrols-mcp

./: CHANGELOG.md  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
assets/: architecture.py
pmcontrols_mcp/: __init__.py  _tools.py  server.py
tests/: test_server.py  test_tools.py
