[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmcontrols-mcp"
version = "0.1.0"
description = "MCP server for pmcontrols: validated project scheduling and earned value tools for AI agents."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = ["pmcontrols>=0.1.0", "mcp>=1.0"]
keywords = [
    "mcp", "model-context-protocol", "ai-agents", "project-management",
    "critical-path", "cpm", "pert", "earned-value", "earned-schedule",
    "project-controls",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Scheduling",
]

[project.scripts]
pmcontrols-mcp = "pmcontrols_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "build"]

[project.urls]
Homepage = "https://github.com/arikanatakan/pmcontrols-mcp"
Repository = "https://github.com/arikanatakan/pmcontrols-mcp"
Issues = "https://github.com/arikanatakan/pmcontrols-mcp/issues"

[tool.setuptools.packages.find]
include = ["pmcontrols_mcp*"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
