[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pmcontrols-mcp"
version = "0.2.1"
description = "MCP server for pmcontrols: validated project scheduling and earned value tools for AI agents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = ["pmcontrols[plot]>=0.2.1", "mcp>=1.0"]
keywords = [
    "mcp", "model-context-protocol", "ai-agents", "project-management",
    "critical-path", "cpm", "pert", "earned-value", "earned-schedule",
    "project-controls", "gantt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Scheduling",
]

[project.scripts]
pmcontrols-mcp = "pmcontrols_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy", "build"]

[project.urls]
Homepage = "https://github.com/arikanatakan/pmcontrols-mcp"
Repository = "https://github.com/arikanatakan/pmcontrols-mcp"
Issues = "https://github.com/arikanatakan/pmcontrols-mcp/issues"
Library = "https://github.com/arikanatakan/pmcontrols"

[tool.setuptools.packages.find]
include = ["pmcontrols_mcp*"]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
